<resources>
    <string name="app_name">FI$HKU</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Masuk</string>
    <string name="enter_email_and_password">Masukan email dan kata sandi</string>
    <string name="email">Email</string>
    <string name="password">Kata sandi</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="dont_have_account">Tidak punya akun?</string>
    <string name="register_here"><a href="signup">Daftar di sini</a></string>
    <string name="email_cannot_be_empty">Email tidak boleh kosong</string>
    <string name="invalid_email_format">Format email tidak sesuai</string>
    <string name="password_cannot_be_empty">Password tidak boleh kosong</string>
    <string name="create_account">Buat Akun</string>
    <string name="enter_data">Masukkan data untuk membuat akun</string>
    <string name="register">Daftar</string>
    <string name="login_here"><a href="signup">Masuk di sini</a></string>
    <string name="name">Nama</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="address">Alamat</string>
    <string name="agreement">Dengan melanjutkan, Anda menyetujui Persyaratan Layanan kami dan Kebijakan Privasi.</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="phone_cannot_be_empty">Nomer telepon tidak boleh kosong</string>
    <string name="invalid_phone_format">Format nomer telepon tidak sesuai</string>
    <string name="name_cannot_be_empty">Nama tidak boleh kosong</string>
    <string name="address_cannot_be_empty">Alamat tidak boleh kosong</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_detection">Deteksi</string>
    <string name="title_dashboard">Beranda</string>
    <string name="title_market">Pasar</string>
    <string name="title_account">Akun</string>
    <string name="logout">Keluar</string>
    <string name="desc_edit_profile">Tombol edit profil</string>
    <string name="tab_order">Pesanan</string>
    <string name="tab_order_history">Riwayat Pesanan</string>
    <string name="logout_message">Ingin keluar dari akun ini?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="search_hint">Cari ikan di Fishku</string>
    <string name="banner_discount">Banner Discount</string>
    <string name="produk_terbaik">Produk Terbaik</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="kg">/kg</string>
    <string name="select_fish">Pilih Ikan</string>
    <string name="basket">Keranjang</string>
    <string name="buy_fish">Beli Ikan</string>
    <string name="recommendation">Rekomendasi</string>
    <string name="product_empty">Daftar produk kosong</string>
    <string name="title_acitivity_search">Search Activity</string>
    <string name="empty_search_product">Produk tidak ditemukan</string>
    <string name="something_went_wrong">Terjadi kesalahan</string>
    <string name="checkout">Checkout</string>
    <string name="image_photo">foto ikan</string>
    <string name="title_acitivity_detail">Detail Activity</string>
    <string name="weight">Kg</string>
    <string name="fish_name">Ikan Tuna</string>
    <string name="available_weight">Tersedia %s Kg</string>
    <string name="fish_price">Rp 97.000</string>
    <string name="reduce_weight">tombol kurangi jumlah</string>
    <string name="default_weight">1</string>
    <string name="add_weight">tombol menambah jumlah</string>
    <string name="seller_name">Muslikin</string>
    <string name="tpi_name">TPI JEPARA</string>
    <string name="tpi_address">Jl. Sidik Harun, Ujungbatu III, Ujungbatu, Kec. Jepara, Kabupaten Jepara, Jawa Tengah</string>
    <string name="note">Catatan</string>
    <string name="add_note">Tambahkan catatan</string>
    <string name="add_to_cart">Masukkan ke Keranjang</string>
    <string name="bagde_number">0</string>
    <string name="cart">Keranjang</string>
    <string name="title_cart">Keranjang</string>
    <string name="delete">Hapus</string>
    <string name="empty_cart">Ups keranjang masih kosong</string>
    <string name="pay">Bayar</string>
    <string name="input_cart_message">Berhasil ditambahkan ke Keranjang</string>
    <string name="see_cart">Lihat</string>
    <string name="add_to_basket">Tambah ke Keranjang</string>
    <string name="find_fish">Cari Ikan</string>
    <string name="filter">Filter</string>
    <string name="detection_frehsness">Deteksi Kesegaran</string>
    <string name="put_image">Put image to detect</string>
    <string name="notes_detection">Catatan : Silakan masukkan gambar melalui galeri atau kamera. Lalu, klik tombol <b>Deteksi Kesegaran</b> untuk mendeteksi kesegaran ikan.</string>
    <string name="put_from_gallery">Pilih dari Galeri</string>
    <string name="take_from_camera">Ambil dari Kamera</string>
    <string name="title_order">Pesanan</string>
    <string name="discount_code">Kode diskon</string>
    <string name="buy">Beli</string>
    <string name="fishku_express">Fishku Express</string>
    <string name="take_it_by_yourself">Ambil sendiri</string>
    <string name="courier">Kurir</string>
    <string name="payment">Pembayaran</string>
    <string name="bca_bank">Bank BCA</string>
    <string name="gopay">Gopay</string>
    <string name="cod">Cash on Delivery (COD)</string>
    <string name="change">Ubah</string>
    <string name="order">Pesan</string>
    <string name="subtotal_product">Subtotal produk</string>
    <string name="subtotal_delivery">Subtotal pengiriman</string>
    <string name="total">Total</string>
    <string name="select_product">Pilih produk yang ingin dibeli</string>
    <string name="choose_courier">Pilih kurir</string>
    <string name="choose_payment">Pilih pembayaran</string>
    <string name="price_filter">Harga</string>
    <string name="rate_filter">Penilaian</string>
    <string name="distance_filter">Jarak</string>
    <string name="apply">Terapkan</string>
    <string name="fish_type">Pilih Jenis Ikan</string>
    <string name="select_type">Pilih Bagian</string>
    <string name="eye">Mata</string>
    <string name="gill">Insang</string>
    <string name="meat">Daging</string>
    <string name="texture">Tekstur</string>
    <string name="title_detail_order">Rincian Pesanan</string>
    <string name="order_finished">Pesanan selesai</string>
    <string name="order_finished_message">Pesanan telah sampai pada senin, 07–07–2022</string>
    <string name="resi_number">No. Resi</string>
    <string name="dummy_resi">023894382377362</string>
    <string name="rating">Nilai</string>
    <string name="contact_seller">Hubungi penjual</string>
    <string name="buy_again">Beli lagi</string>
    <string name="title_status_order">Status Pengiriman</string>
    <string name="receiver">Penerima</string>
    <string name="dummy_name">Fatkhu Rohman</string>
    <string name="phone">No. HP</string>
    <string name="dummy_phone_number">08123458938</string>
    <string name="arrived">Pesanan Sampai</string>
    <string name="select_fish_part">Siilakan pilih bagian ikan terlebih dahulu</string>
    <string name="photo_cannot_empty">Foto tidak boleh kosong</string>
    <string name="price_total">Total Harga</string>
    <string name="no_price">-</string>
    <string name="empty_order">Daftar kosong</string>
    <string name="title_invoice">Invoice</string>
    <string name="send_message">Kirim pesan</string>
    <string name="pesan">Pesan</string>
    <string name="daftar_pesan">Daftar Pesan</string>
    <string name="last_message">Pesan Terakhir</string>
    <string name="time">Time</string>
    <string name="unread">0</string>
    <string name="wa_to">WhatsApp ke</string>
    <string name="number">6285903820412</string>
    <string name="sub_otp">Kami akan mengirimkan kode verifikasi ke WhatsApp anda</string>
    <string name="title_otp">Kirim kode verifikasi</string>
    <string name="message">message</string>
    <string name="code">00000</string>
    <string name="resend_code">Kirim ulang kode</string>
    <string name="verify_code">Verifikasi</string>
    <string name="waiting_code">Tunggu dalam %s detik untuk kirim ulang</string>
    <string name="sub_verify">Kode verifikasi telah dikirimkan melalui WhatsApp ke</string>
    <string name="title_verify">Masukkan Kode Verifikasi</string>
    <string name="wrong_code">Kode verifikasi salah</string>
    <string name="format">Masukkan nomor sesuai dengan \nformat yang ada</string>
    <string name="enter_no">Masukkan Nomor</string>
    <string name="title_enter_no">Daftar dengan nomor \nWhatsApp</string>
    <string name="wrong_no_format">Format nomor salah</string>
    <string name="log_in_with_google">Masuk dengan Google</string>
    <string name="atau">atau</string>
    <string name="email_used">Email Sudah Digunakan</string>
    <string name="something_wrong">Terjadi kesalahan coba lagi</string>
    <string name="login_to_linked">Anda belum menghubungkan akun ini</string>
    <string name="link_to_google">Link ke Google</string>
    <string name="no_chat">Tidak ada percakapan</string>
    <string name="select_address">Pilih alamat</string>
    <string name="my_current_location">lokasi sekarang</string>
    <string name="address_is_required">Alamat harus diisi</string>
    <string name="delivery_location">Lokasi pengiriman</string>
    <string name="title_activity_address">Alamat</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="label_update">Perbarui</string>
    <string name="welcome_one">Mencari ikan segar sekarang hanya dengan satu sentuhan</string>
    <string name="welcome_two">Cari tahu kesegaran ikanmu hanya dengan satu sentuhan</string>
    <string name="welcome_three">SELAMAT DATANG DI FISHKU !</string>
    <string name="next">Selanjutnya</string>
    <string name="or">atau</string>
    <string name="fishku_logo">logo fishku</string>
    <string name="minimum_password_length">Kata sandi minimal harus 6 karakter</string>
    <string name="change_profile_photo">Ganti Foto Profil</string>
    <string name="payment_warning">Jangan melakukan pembayaran terlebih dahulu karena aplikasi masih dalam proses pengembangan</string>
    <string name="title_setting">Pengaturan</string>
    <string name="address_list">Daftar Alamat</string>
    <string name="account_security">Keamanan Akun</string>
    <string name="haki">Hak Kekayaan Intelektual</string>
    <string name="know_fishku">Kenali Fishku</string>
    <string name="term_condition">Syarat dan Ketentuan</string>
    <string name="support_fishku">Support Fishku</string>
    <string name="critics_suggestion">Kritik dan Saran</string>
    <string name="email_subject">Fishku - Customer Support</string>
    <string name="email_fishku">admin@fishku.com</string>
    <string name="nearest_store"> Toko Terdekat </string>
    <string name="fish_detection"> Deteksi Ikan</string>
    <string name="title_activity_set_location">SetLocationActivity</string>
    <string name="related_fish">Ikan Terkait :</string>
    <string name="set_location"> Pilih Lokasi Anda </string>
    <string name="save_changes">Simpan Perubahan</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="fish_information"> Informasi Ikan </string>
    <string name="selected_fish"> Ikan Yang Dipilih </string>
    <string name="welcome">Selamat datang di Fishku!</string>
    <string name="waves">Waves</string>
    <string name="faq">FAQ</string>
    <string-array name="data_questions">
        <item> Apa Itu Fishku? </item>
        <item> Bagaimana cara memesan produk di Fishku? </item>
        <item> Bagaimana cara mengelola akun di Fishku? </item>
        <item> Bagaimana cara mengelola pesanan saya di Fishku? </item>
        <item> Bagaimana cara Mencari Informasi Ikan? </item>
        <item> Bagaimana cara Melakukan Deteksi Kesegaran Ikan? </item>
    </string-array>
</resources>