<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_choose_fish"
        android:icon="@drawable/ic_detection"
        android:title="@string/title_detection" />

<!--    <item-->
<!--        android:id="@+id/navigation_market"-->
<!--        android:icon="@drawable/ic_market"-->
<!--        android:title="@string/title_market" />-->

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_message"
        android:title="@string/pesan" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />

</menu>