<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        style="@style/Text.Medium.Medium"
        android:text="@string/logout_message"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_logout_no"
            style="@style/Text.Medium.Medium"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_button_border"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            tools:targetApi="m" />

        <Button
            android:id="@+id/btn_logout_yes"
            style="@style/Text.Medium.Medium"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/yes"
            android:textAllCaps="false"
            tools:targetApi="m" />
    </LinearLayout>
</LinearLayout>